# EPIC-stack

./: .gitignore  README.md
execution/: 1_livox.sh  2_fastlio.sh  3_mavros.sh  4_tf_odom_relay.sh  5_epic.sh  run_realflight.sh  stack1.sh
execution/host_only/: host_run.sh  stack1_host.sh
src/EPIC_poongsan/src/EPIC/src/MARSIM/mars_drone_sim/launch/: garage.launch
src/EPIC_poongsan/src/EPIC/src/MARSIM/test_interface/launch/: single_drone_with_fuel.xml
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/config/: garage.yaml  real.yaml
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/launch/: garage.launch  real_flight.launch  replay_tuning.launch
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/scripts/: record_on_goal.py
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp  fsm_utils.cpp
src/EPIC_poongsan/src/EPIC/src/global_planner/frontier_manager/src/: frontier_manager.cpp
src/EPIC_poongsan/src/EPIC/src/local_planner/minco_planner/launch/: px4_bridge.launch
src/FAST_LIO/PCD/: clean_pcd.py
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/livox_ros_driver2/config/: MID360_config.json
src/reactive_local_avoidance/: CMakeLists.txt  package.xml
src/reactive_local_avoidance/config/: local_avoidance.yaml
src/reactive_local_avoidance/launch/: local_avoidance.launch
src/reactive_local_avoidance/src/: local_avoidance.cpp
(+8 files in other folders)
